DisplayPoll Component:  displaying graph, table with delete functionality.  addition of backend to serve these functions as well. Merge remote-tracking branch 'origin/dev' into boDisplay
Co-authored-by: Troy Prejusa <tprejusa@users.noreply.github.com>

--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -6,3 +6,30 @@ body {
     background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSnPP9B7sJlf97pafbiCNpSpHJ23MP7t3m1-w&usqp=CAU);
     background-size: cover;
 }
+
+
+.displayPrompt {
+    margin: 5% 5%
+}
+
+.displayPoll {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.display-list-group {
+    width: 70%;
+    
+}
+
+.display-barchart {
+    /* margin: 10rem 10rem 10rem 10rem;
+    width: 800px; */
+    /* flex: flex-grow; */
+    width: 100%;
+
+
+  }
