--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -6,3 +6,7 @@ body {
     background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSnPP9B7sJlf97pafbiCNpSpHJ23MP7t3m1-w&usqp=CAU);
     background-size: cover;
 }
+
+.form-wrapper {
+    width: 40%;
+}
