--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -3,7 +3,7 @@ body {
     line-height: 1.3;
     font-family: 'Source Sans Pro', sans-serif;
     background-color: rgb(240, 208, 208);
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSnPP9B7sJlf97pafbiCNpSpHJ23MP7t3m1-w&usqp=CAU);
+    background-image: url(https://i.pinimg.com/736x/aa/db/56/aadb5612d8eb7361ab03c3d7e2b07762.jpg);
     background-size: cover;
 }
 
